--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.9.1",
-    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-contract-sizer": "^2.5.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
