--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.9.1",
-    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-contract-sizer": "^2.5.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
@@ -39,5 +40,8 @@
     "ts-node": "^10.1.0",
     "typechain": "^5.1.2",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0"
   }
 }
